[package]
name = "zipped-shapefile"
version = "0.1.0"
edition = "2021"
authors = ["Michael Salib <msalib@gmail.com>"]
rust-version = "1.56"  # only because we're using the 2021 edition
description = "a reader for zipped shapefiles"
repository = "https://github.com/msalib/zipped-shapefile/"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "gis", "geo", "raster", "geographic"]
categories = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbase = "0.2.0"  # this has to match shapefile's definition
shapefile = {version = "0.3.0", features = ["geo-types"]}
thiserror = "1.0.32"
zip = "0.6.2"
